src/plugins/platforms/ios/qiosglobal.h
@@ -37,7 +37,7 @@ int infoPlistValue(NSString* key, int defaultValue);
 QT_END_NAMESPACE
 
 @interface UIResponder (QtFirstResponder)
-+ (id)currentFirstResponder;
++ (id)qt_currentFirstResponder;
 @end
 
 QT_BEGIN_NAMESPACE
